Changed size of dataproejct image

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <p> Below includes my major projects I had created for my class!</p>
 <h1>Data Project</h1>
 <p>This is my Data Project</p>
-<img src = "DataProject_pg1.png">
-<img src = "DataProject_pg2.png">
+<img src = "DataProject_pg1.png" width="65%" height="65%">
+<img src = "DataProject_pg2.png" width="65%" height="65%">
 
 </body>
 </html>
