Added curation project

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <body>
-<p> Hello, my name is Yeesa and this is for my DTC 101 class.</p>
+<h1> Hello, my name is Yeesa and this is for my DTC 101 class.</h1>
 <p> Below includes my major projects I had created for my class!</p>
+<hr>
 <h1>Data Project</h1>
-<p>This is my Data Project</p>
 <img src = "DataProject_pg1.png" width="300" height="400">
 <img src = "DataProject_pg2.png" width="300" height="400">
+<hr>
 
+<h1>Curation Project</h1>
+<a href="CurationProject_poster.pdf">example</a>
+<a href="CurationProject_reflection.pdf">example</a>
 </body>
 </html>
