Added curation project

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <p> Below includes my major projects I had created for my class!</p>
 <hr>
 <h1>Data Project</h1>
-<img src = "DataProject_pg1.png" width="300" height="400">
-<img src = "DataProject_pg2.png" width="300" height="400">
+<img src = "DataProject_pg1.png" width="500" height="700">
+<img src = "DataProject_pg2.png" width="500" height="700">
 <hr>
 
 <h1>Curation Project</h1>
-<a href="CurationProject_poster.pdf">example</a>
-<a href="CurationProject_reflection.pdf">example</a>
+<object data="CurationProject_poster.pdf"></a>
+<object data="CurationProject_reflection.pdf"></a>
 </body>
 </html>
