--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <p> Below includes my major projects I had created for my class!</p>
 <hr>
 <h1>Data Project</h1>
-<img src = "DataProject_pg1.png" width="500" height="700">
-<img src = "DataProject_pg2.png" width="500" height="700">
+<img src = "DataProject_pg1.png" width="300" height="400">
+<img src = "DataProject_pg2.png" width="300" height="400">
 <hr>
 
 <h1>Curation Project</h1>
-<object data="CurationProject_poster.pdf"></a>
-<object data="CurationProject_reflection.pdf"></a>
+<img src = "CurationProject_pg1.png" width="300" height="400">
+<img src = "CurationProject_pg2.png" width="300" height="400">
 </body>
 </html>
