added curation project reflection

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <h1>Curation Project</h1>
 <img src = "CurationProject_pg1.png" width="300" height="400">
 <img src = "CurationProject_pg2.png" width="300" height="400">
+<h3>Reflection</h3>
+<object data ="CurationProject_reflection.pdf" type="application/pdf" width="300" height="400"></object>
 <hr>
 </body>
 </html>
