added curation project reflection

--- a/index.html
+++ b/index.html
@@ -13,51 +13,7 @@
 <img src = "CurationProject_pg1.png" width="300" height="400">
 <img src = "CurationProject_pg2.png" width="300" height="400">
 <h3>Reflection</h3>
-<object data ="CurationProject_reflection.pdf" type="application/pdf" width="300" height="400"></object>
-<p>
-    Curation Project — Reflection 
-I decided to explore the cultural impact phones have had on our society due to their 
-extraordinary evolution. It is fascinating from a technological standpoint and from a cultural 
-standpoint to analyze how we have transformed the way we communicate and interact with 
-each other. The process of finding information and images for my project was not difficult as it is 
-very well documented due to how popular phones are. I was able to find Wikimedia, which is a 
-website that provides images that are either creative commons materials or public domain. 
-Before I was able to find this website I had a very difficult time finding any images of the specific 
-phones I was looking for. I was also not able to find any articles that were creative commons 
-materials or public domain materials that spoke specifically about the cultural impact of phones. 
-It made me realize just how rare these materials are, although rightfully so as the owner of 
-these images and articles deserve recognition and value for their work. 
-My project focuses on the different functionalities that were the main focus of phones 
-during a given time period and how it transformed the way we communicate. I wanted to avoid 
-the narrative of "newer is better" or "older is better" and highlight how each technological 
-advancement we made to phones had an impact on society. Phones started with the focus of 
-connecting people over long distances. For the first time, it allowed for instant communication 
-instead of waiting for the next time you meet them. It provided convenience, and importantly it 
-strengthened our relationships with one another and brought us closer as a community. Each 
-technological advancement still heavily relied on the notion of bringing people together. For 
-example, TikTok although seen as more of an entertainment app, creates communities that 
-allow people to share important thoughts and content with one another. I often see content that 
-advocates for minorities or speaks up against discrimination in our communities. Although 
-phones are now drastically different from a technological aspect with many more functionalities 
-than ever before, communication and connection is ultimately what drive people to continue to 
-rely heavily on their phones.  
- 
-Citations: 
-[1] Redrum0486. “File:DynaTAC8000X.Jpg - Wikimedia Commons.” Wikimedia, 
-commons.wikimedia.org/wiki/File:DynaTAC8000X.jpg. Accessed 6 June 2023. 
-Licensed under the Creative Commons Attribution license. 
-[2] Jkbw. “File:Nokia 1011.Jpg - Wikimedia Commons.” Wikimedia, 
-commons.wikimedia.org/wiki/File:Nokia_1011.jpg. Accessed 6 June 2023. 
-Licensed under the Creative Commons Attribution license. 
-[3] Towel401. “File:Nokia6650 Unlocked.Jpg - Wikimedia Commons.” Wikimedia, 
-commons.wikimedia.org/wiki/File:Nokia6650_unlocked.jpg. Accessed 6 June 2023. 
-Public Domain work. 
-[4] Chen, Dinkun. “File:Samsung Galaxy S22 Ultra, LG G6, iPhone SE3, Samsung Galaxy S10 
-5G ...” Wikimedia, 
-commons.wikimedia.org/wiki/File:SAMSUNG_Galaxy_S22_Ultra,_LG_G6,_iPhone_SE3,_SAM
-SUNG_Galaxy_S10_5G.jpg. Accessed 6 June 2023. 
-Licensed under the Creative Commons Attribution license. 
-</p>
+<a href="CurationProject_reflection.pdf">Reflection link</a>
 <hr>
 </body>
 </html>
