--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
 <p> Below includes my major projects I had created for my class!</p>
 <hr>
 <h1>Data Project</h1>
-<img src = "DataProject_pg1.png" width="300" height="400">
-<img src = "DataProject_pg2.png" width="300" height="400">
+<img src = "DataProject_pg1.png" width="500" height="750">
+<img src = "DataProject_pg2.png" width="500" height="750">
 <hr>
 
 <h1>Curation Project</h1>
-<img src = "CurationProject_pg1.png" width="300" height="400">
-<img src = "CurationProject_pg2.png" width="300" height="400">
+<img src = "CurationProject_pg1.png" width="500" height="750">
+<img src = "CurationProject_pg2.png" width="500" height="750">
 <h3>Reflection</h3>
 <a href="CurationProject_reflection.pdf">Reflection link</a>
 <hr>
+<h1>Design Thinking Project</h1>
+<object data="DesignThinkingProject.pdf" type="application/pdf" width="500px" height="750px"></object>
 </body>
 </html>
