--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 <p> Below includes my major projects I had created for my class!</p>
 <hr>
 <h1>Data Project</h1>
-<img src = "DataProject_pg1.png" width="500" height="750">
-<img src = "DataProject_pg2.png" width="500" height="750">
+<img src = "DataProject_pg1.png" width="750" height="900">
+<img src = "DataProject_pg2.png" width="750" height="900">
 <hr>
 
 <h1>Curation Project</h1>
-<img src = "CurationProject_pg1.png" width="500" height="750">
-<img src = "CurationProject_pg2.png" width="500" height="750">
+<img src = "CurationProject_pg1.png" width="750" height="900">
+<img src = "CurationProject_pg2.png" width="750" height="900">
 <h3>Reflection</h3>
-<a href="CurationProject_reflection.pdf">Reflection link</a>
+<object data="CurationProject_reflection.pdf" type="application/pdf" width="750px" height="900"></object>
 <hr>
 <h1>Design Thinking Project</h1>
-<object data="DesignThinkingProject.pdf" type="application/pdf" width="500px" height="750px"></object>
+<object data="DesignThinkingProject.pdf" type="application/pdf" width="750px" height="900"></object>
 </body>
 </html>
